--- a/log-output/manifest/deployment.yaml
+++ b/log-output/manifest/deployment.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: ex1-1
+  name: ex1-3
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: log-output
-  namespace: ex1-1
+  namespace: ex1-3
 spec:
   replicas: 1
   selector:
@@ -20,4 +20,4 @@ spec:
     spec:
       containers:
         - name: app
-          image: kuzn2k/ex1.1-log-output:latest
+          image: kuzn2k/ex1.1-log-output:1.0.0
