--- a/todo-server/manifest/deployment.yaml
+++ b/todo-server/manifest/deployment.yaml
@@ -18,3 +18,6 @@ spec:
           env:
             - name: PORT
               value: "3000"
+          ports:
+            - name: todo-port
+              containerPort: 3000
