--- a/log-output/manifest/deployment.yaml
+++ b/log-output/manifest/deployment.yaml
@@ -1,13 +1,8 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: ex1-3
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  namespace: exercises
   name: log-output
-  namespace: ex1-3
 spec:
   replicas: 1
   selector:
