--- a/system-exercises/persistentvolume.yaml
+++ b/system-exercises/persistentvolume.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
+  namespace: exercises
   name: app-pv
 spec:
   storageClassName: app-storage-pv
