--- a/system-exercises/persistentvolume.yaml
+++ b/system-exercises/persistentvolume.yaml
@@ -2,9 +2,9 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   namespace: exercises
-  name: app-pv
+  name: exercises-app-pv
 spec:
-  storageClassName: app-storage-pv
+  storageClassName: exercises-app-storage-pv
   capacity:
     storage: 10Mi
   volumeMode: Filesystem
