--- a/ping-pong/manifest/service.yaml
+++ b/ping-pong/manifest/service.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   type: ClusterIP
   selector:
-    app: ping-pong-server
+    app: ping-pong-db-server
   ports:
     - port: 2345
       protocol: TCP
