--- a/ping-pong/package.json
+++ b/ping-pong/package.json
@@ -1,14 +1,15 @@
 {
   "name": "ping-pong-server",
-  "version": "1.0.2",
-  "description": "Ping pong Server for MOOC's exercises",
+  "version": "1.0.3",
+  "description": "Ping pong Server for MOOC's exercises (postgress backend)",
   "private": true,
   "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "fastify": "^5.6.x"
+    "fastify": "^5.6.x",
+    "pg": "^8.10.0"
   },
   "engines": {
     "node": ">=22.17.0 <23"
