--- a/todo-app/manifest/todo-backend-deployment.yaml
+++ b/todo-app/manifest/todo-backend-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: app
-          image: kuzn2k/todo-backend:1.0.2
+          image: kuzn2k/todo-backend:1.0.3
           imagePullPolicy: Always
           env:
             - name: PORT
@@ -25,6 +25,31 @@ spec:
                 configMapKeyRef:
                   name: todo-app-config
                   key: todos_url
+            - name: DB_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: todo-app-config
+                  key: db_url
+            - name: DB_PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: todo-app-config
+                  key: db_port
+            - name: DB_USER
+              valueFrom:
+                configMapKeyRef:
+                  name: todo-app-config
+                  key: db_user
+            - name: DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: todo-app-secret
+                  key: db_password
+            - name: DB_DATABASE
+              valueFrom:
+                configMapKeyRef:
+                  name: todo-app-config
+                  key: db_database
           ports:
             - name: todo-bc-port
               containerPort: 3000
