--- a/todo-app/todo-reminder/Dockerfile
+++ b/todo-app/todo-reminder/Dockerfile
@@ -1,8 +1,8 @@
-FROM node:22.17.0-alpine
+FROM node:22.17.0-slim
 
 WORKDIR /app
 
-COPY server.js /app
+COPY create-random-todo.js /app
 COPY package.json /app
 COPY package-lock.json /app
 
@@ -10,4 +10,4 @@ RUN npm install --production --no-audit --no-fund
 
 ENTRYPOINT [ "node" ]
 
-CMD ["/app/server.js"]
+CMD ["/app/create-random-todo.js"]
