--- a/todo-app/todo-backend/package.json
+++ b/todo-app/todo-backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todo-backend",
-  "version": "1.0.3",
-  "description": "TODO Backend application for MOOC's Kubernetes course (postgres)",
+  "version": "1.0.4",
+  "description": "TODO Backend application for MOOC's Kubernetes course (postgres and logging)",
   "main": "server.js",
   "private": true,
   "type": "module",
