--- a/todo-app/manifest/persistentvolumeclaim.yaml
+++ b/todo-app/manifest/persistentvolumeclaim.yaml
@@ -4,9 +4,9 @@ metadata:
   namespace: project
   name: app-storage-claim
 spec:
-  storageClassName: app-storage-pv
+  storageClassName: standard
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 10Mi
+      storage: 10Gi
