--- a/todo-app/manifest/todo-backend-deployment.yaml
+++ b/todo-app/manifest/todo-backend-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: app
-          image: kuzn2k/todo-backend:1.0.4
+          image: PROJECT/BACKEND
           imagePullPolicy: Always
           env:
             - name: PORT
