--- a/todo-app/manifest/todo-app-deployment.yaml
+++ b/todo-app/manifest/todo-app-deployment.yaml
@@ -19,7 +19,7 @@ spec:
             claimName: app-storage-claim    
       containers:
         - name: app
-          image: kuzn2k/todo-server:1.0.5
+          image: PROJECT/WWW
           imagePullPolicy: Always
           volumeMounts:
             - name: shared-files
