--- a/todo-app/kustomization.yaml
+++ b/todo-app/kustomization.yaml
@@ -16,5 +16,7 @@ images:
     newName: kuzn2k/todo-server:1.0.5
   - name: PROJECT/BACKEND
     newName: kuzn2k/todo-backend:1.0.5
+  - name: PROJECT/REMINDER
+    newName: kuzn2k/todo-reminder:1.0.0    
 generators:
   - secrets/generator.yaml
