--- a/todo-app/manifest/todo-app-deployment.yaml
+++ b/todo-app/manifest/todo-app-deployment.yaml
@@ -8,6 +8,10 @@ spec:
   selector:
     matchLabels:
       app: todo-server
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 100%
   template:
     metadata:
       labels:
