--- a/todo-app/manifest/cronjobs.yaml
+++ b/todo-app/manifest/cronjobs.yaml
@@ -40,3 +40,57 @@ spec:
                   configMapKeyRef:
                     name: todo-app-config
                     key: db_database
+---
+apiVersion: batch/v1
+kind: CronJob
+metadata:
+  namespace: project
+  name: todo-postgres-backup
+spec:
+  schedule: "0 0 * * *"
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          restartPolicy: OnFailure
+          containers:
+          - name: todo-postgres-backup
+            image: PROJECT/BACKUP
+            imagePullPolicy: Always
+            env:
+              - name: DB_HOST
+                valueFrom:
+                  configMapKeyRef:
+                    name: todo-app-config
+                    key: db_url
+              - name: DB_PORT
+                valueFrom:
+                  configMapKeyRef:
+                    name: todo-app-config
+                    key: db_port
+              - name: DB_USER
+                valueFrom:
+                  configMapKeyRef:
+                    name: todo-app-config
+                    key: db_user
+              - name: DB_NAME
+                valueFrom:
+                  configMapKeyRef:
+                    name: todo-app-config
+                    key: db_database
+              - name: PGPASSWORD
+                valueFrom:
+                  secretKeyRef:
+                    name: todo-app-secret
+                    key: db_password
+              - name: GCS_BUCKET
+                valueFrom:
+                  configMapKeyRef:
+                    name: todo-app-config
+                    key: gcs_bucket
+            volumeMounts:
+              - name: backup-tmp
+                mountPath: /backup
+          volumes:
+            - name: backup-tmp
+              emptyDir: {}
