--- a/todo-app/todo-backend/package.json
+++ b/todo-app/todo-backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todo-backend",
-  "version": "1.0.7",
-  "description": "TODO Backend application for MOOC's Kubernetes course (postgres and logging)",
+  "version": "1.0.8",
+  "description": "TODO Backend application for MOOC's Kubernetes course (postgres, logging, probe, broadcast)",
   "main": "server.js",
   "private": true,
   "type": "module",
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "fastify": "^5.6.x",
+    "nats": "^2.29.3",
     "pg": "^8.10.0"
   },
   "engines": {
