--- a/app4.7/kustomization.yaml
+++ b/app4.7/kustomization.yaml
@@ -1,22 +1,23 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - manifest/config.yaml
-  - manifest/persistentvolumeclaim.yaml
-  - manifest/statefullset.yaml
-  - manifest/ping-deployment.yaml
-  - manifest/ping-service.yaml
-  - manifest/random-deployment.yaml
-  - manifest/random-app-service.yaml
-  - manifest/gateway.yaml
-  - manifest/route.yaml
+- manifest/config.yaml
+- manifest/persistentvolumeclaim.yaml
+- manifest/statefullset.yaml
+- manifest/ping-deployment.yaml
+- manifest/ping-service.yaml
+- manifest/random-deployment.yaml
+- manifest/random-app-service.yaml
+- manifest/gateway.yaml
+- manifest/route.yaml
   
 images:
-  - name: PROJECT/WWW
-    newName: kuzn2k/random-server:1.0.8
-  - name: PROJECT/BACKEND
-    newName: kuzn2k/ping-pong-server:1.0.7
-  - name: PROJECT/LOGOUTPUT
-    newName: kuzn2k/log-output:1.0.1
-
-
+- name: PROJECT/BACKEND
+  newName: kuzn2k/ping-pong-server
+  newTag: 463d629fe1a9bd9fe8cb17f893ab8108854a2d56
+- name: PROJECT/LOGOUTPUT
+  newName: kuzn2k/log-output
+  newTag: 463d629fe1a9bd9fe8cb17f893ab8108854a2d56
+- name: PROJECT/WWW
+  newName: kuzn2k/random-server
+  newTag: 463d629fe1a9bd9fe8cb17f893ab8108854a2d56
