Fix rolling strategy

--- a/app4.7/manifest/random-deployment.yaml
+++ b/app4.7/manifest/random-deployment.yaml
@@ -8,6 +8,10 @@ spec:
   selector:
     matchLabels:
       app: random-server
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 100%
   template:
     metadata:
       labels:
