--- a/.github/workflows/log-app.yaml
+++ b/.github/workflows/log-app.yaml
@@ -51,4 +51,4 @@ jobs:
         uses: EndBug/add-and-commit@v9
         with:
           add: './app4.7/kustomization.yaml'
-          message: New version released ${{ github.sha }}
+          message: New version of Log output released ${{ github.sha }}
