--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,6 +18,7 @@ env:
   IMAGE_REMINDER: todo-reminder
   SERVICE_REMINDER: todo-reminder-job  
   IMAGE_BACKUP: todo-backup
+  IMAGE_BROADCASTER: broadcaster
   BRANCH: ${{ github.ref_name }}
 
 jobs:
@@ -55,6 +56,7 @@ jobs:
           echo "IMAGE_BACKEND_TAG=$REGISTRY/$PROJECT_ID/$REPOSITORY/$IMAGE_BACKEND:$BRANCH-$GITHUB_SHA" >> $GITHUB_ENV
           echo "IMAGE_REMINDER_TAG=$REGISTRY/$PROJECT_ID/$REPOSITORY/$IMAGE_REMINDER:$BRANCH-$GITHUB_SHA" >> $GITHUB_ENV
           echo "IMAGE_BACKUP_TAG=$REGISTRY/$PROJECT_ID/$REPOSITORY/$IMAGE_BACKUP:$BRANCH-$GITHUB_SHA" >> $GITHUB_ENV
+          echo "IMAGE_BROADCASTER_TAG=$REGISTRY/$PROJECT_ID/$REPOSITORY/$IMAGE_BROADCASTER:$BRANCH-$GITHUB_SHA" >> $GITHUB_ENV
 
       - name: Build WWW
         working-directory: ./todo-app/todo-server
@@ -87,6 +89,14 @@ jobs:
       - name: Publish BACKUP
         working-directory: ./todo-app/backup-job
         run: docker push $IMAGE_BACKUP_TAG
+
+      - name: Build BROADCASTER
+        working-directory: ./todo-app/broadcaster
+        run: docker build --tag $IMAGE_BROADCASTER_TAG .
+
+      - name: Publish BACKUP
+        working-directory: ./todo-app/broadcaster
+        run: docker push $IMAGE_BROADCASTER_TAG
 
       - name: Set up Kustomize
         uses: imranismail/setup-kustomize@v2.1.0
