--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,9 +22,9 @@ env:
   BRANCH: ${{ github.ref_name }}
 
 jobs:
-  build-publish-deploy:
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/heads/') && !contains(github.event.head_commit.message, '[skip ci]')
-    name: Build, Publish and Deploy
+  build-publish-deploy-staging:
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/heads/main') && !contains(github.event.head_commit.message, '[skip ci]')
+    name: Build, Publish and Deploy (staging)
     runs-on: ubuntu-latest
 
     steps:
@@ -102,7 +102,7 @@ jobs:
         uses: imranismail/setup-kustomize@v2.1.0
 
       - name: Use right image
-        working-directory: ./todo-app
+        working-directory: ./todo-app/overlays/staging
         run: |-
           kustomize edit set image PROJECT/WWW=$IMAGE_WWW_TAG
           kustomize edit set image PROJECT/BACKEND=$IMAGE_BACKEND_TAG
@@ -116,8 +116,108 @@ jobs:
       - name: commit kustomization.yaml to GitHub
         uses: EndBug/add-and-commit@v9
         with:
-          add: './todo-app/kustomization.yaml'
-          message: New version of TODO App released ${{ github.sha }} [skip ci]        
+          add: './todo-app/overlays/staging/kustomization.yaml'
+          message: Update staging images for ${{ github.sha }} [skip ci]
+
+  build-publish-deploy-production:
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') && !contains(github.event.head_commit.message, '[skip ci]')
+    name: Build, Publish and Deploy (production)
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - uses: google-github-actions/auth@v2
+        with:
+          credentials_json: '${{ secrets.GKE_SA_KEY }}'
+
+      - name: 'Set up Cloud SDK'
+        uses: google-github-actions/setup-gcloud@v2
+
+      - name: 'Use gcloud CLI'
+        run: gcloud info
+
+      - run: gcloud --quiet auth configure-docker $REGISTRY
+
+      - name: 'Get GKE credentials'
+        uses: 'google-github-actions/get-gke-credentials@v2'
+        with:
+          cluster_name: '${{ env.GKE_CLUSTER }}'
+          project_id: '${{ env.PROJECT_ID }}'
+          location: '${{ env.GKE_ZONE }}'
+
+      - name : 'Form the image name'
+        run: |-
+          echo "IMAGE_WWW_TAG=$REGISTRY/$PROJECT_ID/$REPOSITORY/$IMAGE_WWW:$BRANCH-$GITHUB_SHA" >> $GITHUB_ENV
+          echo "IMAGE_BACKEND_TAG=$REGISTRY/$PROJECT_ID/$REPOSITORY/$IMAGE_BACKEND:$BRANCH-$GITHUB_SHA" >> $GITHUB_ENV
+          echo "IMAGE_REMINDER_TAG=$REGISTRY/$PROJECT_ID/$REPOSITORY/$IMAGE_REMINDER:$BRANCH-$GITHUB_SHA" >> $GITHUB_ENV
+          echo "IMAGE_BACKUP_TAG=$REGISTRY/$PROJECT_ID/$REPOSITORY/$IMAGE_BACKUP:$BRANCH-$GITHUB_SHA" >> $GITHUB_ENV
+          echo "IMAGE_BROADCASTER_TAG=$REGISTRY/$PROJECT_ID/$REPOSITORY/$IMAGE_BROADCASTER:$BRANCH-$GITHUB_SHA" >> $GITHUB_ENV
+
+      - name: Build WWW
+        working-directory: ./todo-app/todo-server
+        run: docker build --tag $IMAGE_WWW_TAG .
+
+      - name: Publish WWW
+        working-directory: ./todo-app/todo-server
+        run: docker push $IMAGE_WWW_TAG
+
+      - name: Build BACKEND
+        working-directory: ./todo-app/todo-backend
+        run: docker build --tag $IMAGE_BACKEND_TAG .
+
+      - name: Publish BACKEND
+        working-directory: ./todo-app/todo-backend
+        run: docker push $IMAGE_BACKEND_TAG
+
+      - name: Build REMINDER
+        working-directory: ./todo-app/todo-reminder
+        run: docker build --tag $IMAGE_REMINDER_TAG .
+
+      - name: Publish REMINDER
+        working-directory: ./todo-app/todo-reminder
+        run: docker push $IMAGE_REMINDER_TAG
+
+      - name: Build BACKUP
+        working-directory: ./todo-app/backup-job
+        run: docker build --tag $IMAGE_BACKUP_TAG .
+
+      - name: Publish BACKUP
+        working-directory: ./todo-app/backup-job
+        run: docker push $IMAGE_BACKUP_TAG
+
+      - name: Build BROADCASTER
+        working-directory: ./todo-app/broadcaster
+        run: docker build --tag $IMAGE_BROADCASTER_TAG .
+
+      - name: Publish BROADCASTER
+        working-directory: ./todo-app/broadcaster
+        run: docker push $IMAGE_BROADCASTER_TAG
+
+      - name: Set up Kustomize
+        uses: imranismail/setup-kustomize@v2.1.0
+
+      - name: Switch to main for overlay update
+        run: |-
+          git fetch origin main
+          git checkout main
+          git pull
+
+      - name: Use right image
+        working-directory: ./todo-app/overlays/production
+        run: |-
+          kustomize edit set image PROJECT/WWW=$IMAGE_WWW_TAG
+          kustomize edit set image PROJECT/BACKEND=$IMAGE_BACKEND_TAG
+          kustomize edit set image PROJECT/REMINDER=$IMAGE_REMINDER_TAG
+          kustomize edit set image PROJECT/BACKUP=$IMAGE_BACKUP_TAG
+          kustomize edit set image PROJECT/BROADCASTER=$IMAGE_BROADCASTER_TAG
+
+      - name: commit kustomization.yaml to GitHub
+        uses: EndBug/add-and-commit@v9
+        with:
+          add: './todo-app/overlays/production/kustomization.yaml'
+          message: Update production images for ${{ github.ref_name }} [skip ci]
 
   cleanup-namespace:
     if: github.event_name == 'delete' && github.event.ref_type == 'branch'
