--- a/todo-app/base/kustomization.yaml
+++ b/todo-app/base/kustomization.yaml
@@ -12,24 +12,16 @@ resources:
   - manifest/nats-deployment.yaml
   - manifest/nats-service.yaml
   - manifest/broadcaster-deployment.yaml
+  - manifest/broadcaster-horizontalpodautoscaler.yaml
   - manifest/cronjobs.yaml
   - manifest/gateway.yaml
   - manifest/route.yaml
     
-images:
-  - name: PROJECT/WWW
-    newName: kuzn2k/todo-server:1.0.7
-  - name: PROJECT/BACKEND
-    newName: kuzn2k/todo-backend:1.0.8
-  - name: PROJECT/REMINDER
-    newName: kuzn2k/todo-reminder:1.0.0
-  - name: PROJECT/BACKUP
-    newName: kuzn2k/backup-job:1.0.0  
-  - name: PROJECT/BROADCASTER
-    newName: kuzn2k/broadcaster:1.0.0
-
 generators:
-- ./secrets/ksops.yaml
+  - secrets/ksops.yaml
 
 generatorOptions:
   disableNameSuffixHash: true
+
+
+
