--- a/todo-app/base/manifest/todo-app-service.yaml
+++ b/todo-app/base/manifest/todo-app-service.yaml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: project
-  name: todo-bc-svc
+  name: todo-svc
 spec:
   type: ClusterIP
   selector:
-    app: todo-backend
+    app: todo-server
   ports:
     - port: 2345
       protocol: TCP
-      targetPort: todo-bc-port
+      targetPort: todo-port
